@@ -33,21 +33,20 @@ if ( file_exists( ICMS_ROOT_PATH . '/modules/' . basename( dirname( __FILE__ ) )
 //	** General information
 $modversion = array(
 	'name' 				=> _MI_IMGLOSSARY_MD_NAME,
-	'version' 			=> '1.03',
+	'version' 			=> 1.03,
 	'status' 			=> 'RC',
 	'status_version'	=> 'RC',
-	'date'				=> 'unknown',
+	'date'				=> 'xx xxxxx 2011',
 
 	'description' 		=> _MI_IMGLOSSARY_MD_DESC,
 	'author' 			=> 'McDonald',
 	'credits' 			=> 'hsalazar (author of Wordbook), Dario Garcia (additions to Wordbook), Catzwolf',
-//	'submit_bug' 		=> 'http://impresscms.trac.cvsdude.com/addons/newticket?type=defect',
 	'license' 			=> 'GNU General Public License (GPL)',
-	'official' 			=> 0,
-	'image' 			=> 'images/imglossary_logo.png',		// Module logo
-	'iconbig' 			=> 'images/imglossary_iconsbig.png',	// Control Panel icon
-	'iconsmall' 		=> 'images/imglossary_iconsmall.png',	// Module menu icon
-	'dirname' 			=> basename( dirname( __FILE__ ) )		// Module DirName 
+	'image' 			=> 'images/imglossary_logo.png',
+	'iconbig' 			=> 'images/imglossary_iconsbig.png',
+	'iconsmall' 		=> 'images/imglossary_iconsmall.png',
+	'dirname' 			=> basename( dirname( __FILE__ ) ),
+	'modname'			=> 'imglossary'
 	);
 
 // 	** Contributors **
@@ -78,16 +77,14 @@ $modversion['hasAdmin'] = 1;
 $modversion['adminindex'] = 'admin/index.php';
 $modversion['adminmenu'] = 'admin/menu.php';
 
-$modversion['onInstall'] = '';
-$modversion['onUpdate']  = '';
-
-// Sql file (must contain sql generated by phpMyAdmin or phpPgAdmin)
-// All tables should not have any prefix!
-$modversion['sqlfile']['mysql'] = 'sql/imglossary.sql';
+$modversion['onInstall'] = 'include/onupdate.inc.php';
+$modversion['onUpdate']  = 'include/onupdate.inc.php';
 
 // Tables created by sql file (without prefix!)
-$modversion['tables'][0] = 'imglossary_cats';
-$modversion['tables'][1] = 'imglossary_entries';
+$modversion['object_items'][1] = 'cats';
+$modversion['object_items'][2] = 'entries';
+
+$modversion['tables'] = icms_getTablesArray( $modversion['dirname'], $modversion['object_items'] );
 
 // Search
 $modversion['hasSearch'] = 1;
